<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".UserMenuFragment">

    <Button
        android:id="@+id/userMenuViewBalanceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userMenuWelcomeTextView"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/user_menu_view_balance" />

    <Button
        android:id="@+id/userMenuTransferFundsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userMenuViewBalanceButton"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/user_menu_transfer_funds" />

    <Button
        android:id="@+id/userMenuExchangeCalculatorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userMenuTransferFundsButton"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/user_menu_calculate_exchange" />

    <Button
        android:id="@+id/userMenuPayBillsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/userMenuExchangeCalculatorButton"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/user_menu_pay_bills" />

    <TextView
        android:id="@+id/userMenuWelcomeTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp" />
</RelativeLayout>