<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".LoginFragment">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginPassword"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:text="@string/login_button" />

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginUsername"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:autofillHints="password"
        android:hint="@string/login_password_hint"
        android:inputType="numberPassword" />

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:autofillHints="username"
        android:hint="@string/login_username_hint"
        android:inputType="textPersonName" />

</RelativeLayout>